[gd_scene load_steps=24 format=2]

[ext_resource path="res://UI-Sprite/map-bg-menu.png" type="Texture" id=1]
[ext_resource path="res://UI-Sprite/Button_normal.png" type="Texture" id=2]
[ext_resource path="res://UI-Sprite/Button_hover.png" type="Texture" id=3]
[ext_resource path="res://Fonts/fontsetting.tres" type="DynamicFont" id=4]
[ext_resource path="res://UI-Sprite/char_selecter.png" type="Texture" id=5]
[ext_resource path="res://UI-Sprite/char_selecter_hover.png" type="Texture" id=6]
[ext_resource path="res://Characters-Sprite/1 Pink_Monster/Pink_Monster.png" type="Texture" id=7]
[ext_resource path="res://resource/Foozle_2DE0001_Pixel_Magic_Effects/Icons/tile002.png" type="Texture" id=8]
[ext_resource path="res://Fonts/Kaph-Regular.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://resource/Foozle_2DE0001_Pixel_Magic_Effects/Icons/tile009.png" type="Texture" id=10]
[ext_resource path="res://resource/Foozle_2DE0001_Pixel_Magic_Effects/Icons/tile007.png" type="Texture" id=11]
[ext_resource path="res://Characters-Sprite/3 Dude_Monster/Dude_Monster.png" type="Texture" id=12]
[ext_resource path="res://Characters-Sprite/2 Owlet_Monster/Owlet_Monster.png" type="Texture" id=13]
[ext_resource path="res://resource/Foozle_2DE0001_Pixel_Magic_Effects/Icons/tile003.png" type="Texture" id=14]
[ext_resource path="res://resource/Foozle_2DE0001_Pixel_Magic_Effects/Icons/dash_skill.png" type="Texture" id=15]
[ext_resource path="res://resource/Foozle_2DE0001_Pixel_Magic_Effects/Icons/powerup_skill.png" type="Texture" id=16]
[ext_resource path="res://resource/Foozle_2DE0001_Pixel_Magic_Effects/Icons/tile004.png" type="Texture" id=17]
[ext_resource path="res://resource/Foozle_2DE0001_Pixel_Magic_Effects/Icons/improve.png" type="Texture" id=18]
[ext_resource path="res://resource/Foozle_2DE0001_Pixel_Magic_Effects/Icons/tile005.png" type="Texture" id=19]
[ext_resource path="res://UI/PickcharactersMenu.gd" type="Script" id=20]

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false

[sub_resource type="DynamicFont" id=2]
size = 8
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=3]
size = 40
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 9 )

[node name="PickcharactersMenu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
script = ExtResource( 20 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="Backbutton" type="TextureButton" parent="."]
margin_left = 30.0
margin_top = 30.0
margin_right = 150.0
margin_bottom = 50.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )

[node name="Label" type="Label" parent="Backbutton"]
margin_right = 150.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 4 )
custom_styles/normal = SubResource( 1 )
text = "BACK"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -427.5
margin_top = -150.0
margin_right = 427.5
margin_bottom = 304.0
custom_constants/separation = 30

[node name="Pink" type="TextureButton" parent="HBoxContainer"]
margin_right = 265.0
margin_bottom = 454.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Pink"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -57.0
margin_top = -193.0
margin_right = -17.0
margin_bottom = -153.0
rect_scale = Vector2( 3.5, 3.5 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="HBoxContainer/Pink"]
margin_left = 93.5
margin_top = 14.0
margin_right = 168.5
margin_bottom = 44.0
custom_fonts/font = ExtResource( 4 )
text = "Pink"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Pink"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -113.0
margin_top = -27.0
margin_right = -81.0
margin_bottom = 5.0
rect_scale = Vector2( 2, 2 )

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Pink/VBoxContainer"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 8 )
stretch_mode = 5

[node name="Label" type="Label" parent="HBoxContainer/Pink/VBoxContainer/TextureRect"]
margin_left = 37.5
margin_top = 10.5
margin_right = 101.5
margin_bottom = 20.5
custom_fonts/font = SubResource( 2 )
text = "Water Ball"

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer/Pink/VBoxContainer"]
margin_top = 36.0
margin_right = 32.0
margin_bottom = 68.0
texture = ExtResource( 10 )
stretch_mode = 5

[node name="Label" type="Label" parent="HBoxContainer/Pink/VBoxContainer/TextureRect2"]
margin_left = 37.5
margin_top = 10.5
margin_right = 101.5
margin_bottom = 20.5
custom_fonts/font = SubResource( 2 )
text = "Tornado"

[node name="TextureRect3" type="TextureRect" parent="HBoxContainer/Pink/VBoxContainer"]
margin_top = 72.0
margin_right = 32.0
margin_bottom = 104.0
texture = ExtResource( 11 )
stretch_mode = 5

[node name="Label" type="Label" parent="HBoxContainer/Pink/VBoxContainer/TextureRect3"]
margin_left = 37.5
margin_top = 10.5
margin_right = 101.5
margin_bottom = 20.5
custom_fonts/font = SubResource( 2 )
text = "Earth Spike"

[node name="White" type="TextureButton" parent="HBoxContainer"]
margin_left = 295.0
margin_right = 560.0
margin_bottom = 454.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/White"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -57.0
margin_top = -193.0
margin_right = -17.0
margin_bottom = -153.0
rect_scale = Vector2( 3.5, 3.5 )
texture = ExtResource( 13 )

[node name="Label" type="Label" parent="HBoxContainer/White"]
margin_left = 79.5
margin_top = 14.0
margin_right = 179.5
margin_bottom = 44.0
custom_fonts/font = ExtResource( 4 )
text = "White"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/White"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -113.0
margin_top = -27.0
margin_right = -81.0
margin_bottom = 5.0
rect_scale = Vector2( 2, 2 )

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/White/VBoxContainer"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 15 )
stretch_mode = 5

[node name="Label" type="Label" parent="HBoxContainer/White/VBoxContainer/TextureRect"]
margin_left = 37.5
margin_top = 10.5
margin_right = 101.5
margin_bottom = 20.5
custom_fonts/font = SubResource( 2 )
text = "Dash"

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer/White/VBoxContainer"]
margin_top = 36.0
margin_right = 32.0
margin_bottom = 68.0
texture = ExtResource( 14 )
stretch_mode = 5

[node name="Label" type="Label" parent="HBoxContainer/White/VBoxContainer/TextureRect2"]
margin_left = 37.5
margin_top = 10.5
margin_right = 101.5
margin_bottom = 20.5
custom_fonts/font = SubResource( 2 )
text = "Wind Cutter"

[node name="TextureRect3" type="TextureRect" parent="HBoxContainer/White/VBoxContainer"]
margin_top = 72.0
margin_right = 32.0
margin_bottom = 104.0
texture = ExtResource( 16 )
stretch_mode = 5

[node name="Label" type="Label" parent="HBoxContainer/White/VBoxContainer/TextureRect3"]
margin_left = 37.5
margin_top = 10.5
margin_right = 101.5
margin_bottom = 20.5
custom_fonts/font = SubResource( 2 )
text = "Power up"

[node name="Blue" type="TextureButton" parent="HBoxContainer"]
margin_left = 590.0
margin_right = 855.0
margin_bottom = 454.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Blue"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -57.0
margin_top = -193.0
margin_right = -17.0
margin_bottom = -153.0
rect_scale = Vector2( 3.5, 3.5 )
texture = ExtResource( 12 )

[node name="Label" type="Label" parent="HBoxContainer/Blue"]
margin_left = 93.5
margin_top = 14.0
margin_right = 168.5
margin_bottom = 44.0
custom_fonts/font = ExtResource( 4 )
text = "Blue"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Blue"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -113.0
margin_top = -27.0
margin_right = -81.0
margin_bottom = 5.0
rect_scale = Vector2( 2, 2 )

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Blue/VBoxContainer"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 19 )
stretch_mode = 5

[node name="Label" type="Label" parent="HBoxContainer/Blue/VBoxContainer/TextureRect"]
margin_left = 37.5
margin_top = 10.5
margin_right = 101.5
margin_bottom = 20.5
custom_fonts/font = SubResource( 2 )
text = "Explosion"

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer/Blue/VBoxContainer"]
margin_top = 36.0
margin_right = 32.0
margin_bottom = 68.0
texture = ExtResource( 17 )
stretch_mode = 5

[node name="Label" type="Label" parent="HBoxContainer/Blue/VBoxContainer/TextureRect2"]
margin_left = 37.5
margin_top = 10.5
margin_right = 101.5
margin_bottom = 20.5
custom_fonts/font = SubResource( 2 )
text = "Spike ball"

[node name="TextureRect3" type="TextureRect" parent="HBoxContainer/Blue/VBoxContainer"]
margin_top = 72.0
margin_right = 32.0
margin_bottom = 104.0
texture = ExtResource( 18 )
stretch_mode = 5

[node name="Label" type="Label" parent="HBoxContainer/Blue/VBoxContainer/TextureRect3"]
margin_left = 37.5
margin_top = 10.5
margin_right = 101.5
margin_bottom = 20.5
custom_fonts/font = SubResource( 2 )
text = "Improve"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -178.0
margin_top = 126.0
margin_right = 178.0
margin_bottom = 166.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="HBoxContainer2"]
margin_top = 5.0
margin_right = 86.0
margin_bottom = 35.0
custom_fonts/font = ExtResource( 4 )
text = "Name"

[node name="LineEdit" type="LineEdit" parent="HBoxContainer2"]
margin_left = 106.0
margin_right = 356.0
margin_bottom = 40.0
rect_min_size = Vector2( 250, 0 )
text = "player1"
max_length = 20
placeholder_text = "enter your name"

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -243.0
margin_top = 29.0
margin_right = 243.0
margin_bottom = 76.0
custom_colors/font_color = Color( 0.117647, 0.737255, 0.45098, 1 )
custom_fonts/font = SubResource( 3 )
text = "Pick a character"

[connection signal="pressed" from="Backbutton" to="." method="_on_Backbutton_pressed"]
[connection signal="pressed" from="HBoxContainer/Pink" to="." method="_on_Pink_pressed"]
[connection signal="pressed" from="HBoxContainer/White" to="." method="_on_White_pressed"]
[connection signal="pressed" from="HBoxContainer/Blue" to="." method="_on_Blue_pressed"]
